Bug 153487 - Cannot set top-left original theme color to text in shape from set "Theme colors"
Summary: Cannot set top-left original theme color to text in shape from set "Theme col...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2023-02-09 01:21 UTC by Regina Henschel
Modified: 2023-07-04 14:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Shape with text (17.43 KB, application/zip)
2023-02-09 01:21 UTC, Regina Henschel
Details
test docx in Word 2019 (45.84 KB, image/png)
2023-02-09 05:14 UTC, V Stuart Foote
Details
test docx in 20230208 master against 7.6.0 (67.27 KB, image/png)
2023-02-09 05:15 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-02-09 01:21:36 UTC
Created attachment 185245 [details]
Shape with text

Open attached document.
Mark the text in the shape.
Try to change the character color this way:
 Open the drop-down and select "Theme colors" set.
 Click on the left top color in the grid.

Expected: Text color changes to black.
Actual: nothing happens

Changing the text color works for the other colors in the grid, but not for the top-left one.

I see the problem in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d44236a62bf59d120dda89924d0d1407b2bd52b
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 V Stuart Foote 2023-02-09 05:14:17 UTC
Confirm the STR with attached .docx, unable to pick the "Background - Dark 1" color cell.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d44236a62bf59d120dda89924d0d1407b2bd52b
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Not clear if it is an issue, but notice if opened with MS Word 2019 that the "Theme Colors" picker chart is arranged in different sequence for how LO parses: Background 1, Text 1, Background 2, Text 2, Accent 1 - Accent 6 and the chart columns are filled with varying levels of lighter or darker.

@Miklos?
Comment 2 V Stuart Foote 2023-02-09 05:14:36 UTC
Created attachment 185249 [details]
test docx in Word 2019
Comment 3 V Stuart Foote 2023-02-09 05:15:09 UTC
Created attachment 185250 [details]
test docx in 20230208 master against 7.6.0
Comment 4 Miklos Vajna 2023-02-09 08:22:14 UTC
> @Miklos?

Tomaz is actively working on theming, he's more competent to answer this.
Comment 5 Commit Notification 2023-07-04 09:15:38 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7fede2c47f8a24b80700fe3b82f71a0f60bffd3d

tdf#153487 First color item needs mnId = 1

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-07-04 11:22:55 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b3dcce7fd39ada7e3318901102311062c28791a5

tdf#153487 First color item needs mnId = 1

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.