tdf#153487 First color item needs mnId = 1

The SvxColorValueSet for the other color palettes is build so that the
first item gets value 1 in its mnId component. But for the new theme
color palette it was 0. That results in the error, that the first
color (top-left in the dialog) could not be selected. An Id of value 0
is handled as 'fail' in various places. Thus use starting mnId = 1 for
theme color palette too.

Change-Id: Ic0b63fee641d4424cabaf25a7f803acd734cbfa3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153860
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>